--- a/package.json
+++ b/package.json
@@ -27,17 +27,16 @@
   },
   "dependencies": {
     "@marko/tags-api-preview": "^0.7.2",
+    "@zag-js/checkbox": "0.31.1",
     "@zag-js/core": "0.31.1",
-    "@zag-js/utils": "0.31.1",
-    "@zag-js/checkbox": "0.31.1"
+    "@zag-js/utils": "0.31.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.6.10",
-    "@zag-js/types": "0.33.2",
     "@marko/compiler": "^5.34.6",
     "@marko/testing-library": "^6.1.5",
     "@marko/type-check": "^1.1.3",
     "@marko/vite": "^4.1.1",
+    "@storybook/addon-actions": "7.6.10",
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/marko": "^8.0.2",
@@ -46,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "@vitest/coverage-v8": "^1.2.1",
+    "@zag-js/types": "0.33.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -63,7 +63,7 @@
     "vitest": "^1.2.1"
   },
   "peerDependencies": {
-    "marko": "4 - 5"
+    "marko": "^5.32.7"
   },
   "private": true
 }
