--- a/package.json
+++ b/package.json
@@ -1,22 +1,66 @@
 {
   "name": "@tokilabs/marko-zag",
-  "description": "The default Marko starter app with TypeScript",
   "version": "1.0.0",
+  "description": "Marko library project with TypeScript",
+  "license": "MIT",
   "type": "module",
+  "files": [
+    "dist",
+    "marko.json",
+    "!**/*.test.*",
+    "!*.tsbuildinfo",
+    "!**/{,*.}stories.*"
+  ],
+  "scripts": {
+    "@ci:build": "npm run build",
+    "@ci:lint": "npm run lint",
+    "@ci:test": "npm run test -- run --coverage",
+    "build": "mtc",
+    "clean": "rm -rf coverage dist node_modules/.{cache,vite,vitest}",
+    "format": "eslint -f unix --fix .; stylelint -f unix --fix '**/*.css'; prettier . --write --log-level=warn; sort-package-json --quiet",
+    "lint": "mtc && eslint -f unix . && stylelint -f unix '**/*.css' && prettier . --check --log-level=warn && sort-package-json --quiet --check",
+    "storybook": "storybook dev",
+    "test": "vitest"
+  },
   "dependencies": {
-    "marko": "^5.31.17",
-    "@zag-js/core": "0.33.1",
     "@marko/tags-api-preview": "^0.7.2",
-    "@zag-js/utils": "0.33.1"
+    "@zag-js/core": "0.33.1",
+    "@zag-js/utils": "0.33.1",
+    "@zag-js/checkbox": "0.33.2"
   },
   "devDependencies": {
-    "@marko/run": "^0.3.0",
-    "@zag-js/types": "0.33.1"
+    "@storybook/addon-actions": "7.6.10",
+    "@zag-js/types": "0.33.2",
+    "@marko/compiler": "^5.34.6",
+    "@marko/testing-library": "^6.1.5",
+    "@marko/type-check": "^1.1.3",
+    "@marko/vite": "^4.1.1",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/marko": "^8.0.2",
+    "@storybook/marko-vite": "^1.0.4",
+    "@testing-library/jest-dom": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@vitest/coverage-v8": "^1.2.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-marko": "^3.1.2",
+    "sort-package-json": "^2.6.0",
+    "storybook": "^7.6.10",
+    "stylelint": "^16.2.0",
+    "stylelint-config-standard": "^36.0.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.1"
   },
-  "private": true,
-  "scripts": {
-    "dev": "marko-run",
-    "build": "marko-run build",
-    "preview": "marko-run preview"
-  }
+  "peerDependencies": {
+    "marko": "4 - 5"
+  },
+  "private": true
 }
